--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content:center;
     align-items:center;
 }
@@ -32,7 +33,37 @@ body {
 }
 
 
+.card{
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    background : #d3d3d3;
+    padding: 10px 5px0;
+    cursor: pointer;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: 0.5s all;
+}
 
+img{
+    width: 100%;       
+}
 
+.card__img{
+    width: 100%;       
+}
 
+.card__text{
+    margin: 10px;
+    user-select: none; /* supported by Chrome and Opera */
+-webkit-user-select: none; /* Safari */
+-khtml-user-select: none; /* Konqueror HTML */
+-moz-user-select: none; /* Firefox */
+-ms-user-select: none;
+}
+
+.card__footer{
+    text-align: center;
+}
 
